@@ -19,14 +19,12 @@ if ($#ARGV != 2) {
 
 # Check for known broken configurations of this cluster
 sub check_valid_config {
-    my $log_statement_stats = config_bool (PgCommon::get_conf_value $version,
-    $cluster, 'postgresql.conf', 'log_statement_stats');
-    my $log_parser_stats = config_bool (PgCommon::get_conf_value $version,
-	$cluster, 'postgresql.conf', 'log_parser_stats');
-    my $log_planner_stats = config_bool (PgCommon::get_conf_value $version,
-	$cluster, 'postgresql.conf', 'log_planner_stats');
-    my $log_executor_stats = config_bool (PgCommon::get_conf_value $version,
-	$cluster, 'postgresql.conf', 'log_executor_stats');
+    my %postgresql_conf = read_cluster_conf_file $version, $cluster,
+        'postgresql.conf';
+    my $log_statement_stats = config_bool $postgresql_conf{'log_statement_stats'};
+    my $log_parser_stats = config_bool $postgresql_conf{'log_parser_stats'};
+    my $log_planner_stats = config_bool $postgresql_conf{'log_planner_stats'};
+    my $log_executor_stats = config_bool $postgresql_conf{'log_executor_stats'};
 
     # statement and other statistics are mutually exclusive
     if ($log_statement_stats && ($log_parser_stats || $log_planner_stats ||
