@@ -6,8 +6,10 @@ postgresql-common (40) unstable; urgency=low
     the default cluster instead of returning an invalid value. Also, do not
     complain if the file does not exist (which is legitime). Closes: #348447
   * debian/README.Debian: Fix 'detailled' typo. Closes: #346442
+  * Replace most calls to get_conf_value() with the much more efficient new
+    function read_cluster_conf_file().
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 17 Jan 2006 20:55:08 +0100
+ -- Martin Pitt <mpitt@debian.org>  Sat, 21 Jan 2006 13:14:48 +0100
 
 postgresql-common (39) unstable; urgency=low
 
